<resources>
    <string name="app_name">LOCODROID England</string>

   <!-- TITLES -->

    <string name="main_title">LOCODROID</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">LocoDroid</string>
    <string name="title_activity_login">Connexion</string>

    <!--END TITLES END -->



    <!-- Strings related to Navigation -->


    <string name="nav_back">Back</string>
    <string name="nav_next">Next</string>
    <string name="lib_btn1">Next</string>
    <string name="btn_next">Next</string>
    <string name="map_login">Login</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_log_out">Log out</string>

    <!--END  Strings related to Navigation END-->


    <!-- background message -->
    <string name="background_doing">Loading ...</string>

    <!--END background message END-->

    <!-- Strings related to login -->


    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_search">Search</string>



    <!-- FORMS -->

    <!-- Login form -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


    <!--END Login form END-->

    <!-- Register form -->
                <!--register fields -->
            <string name="regfield_FullName">Full Name</string>
            <string name="regfield_Email">Email</string>
            <string name="regfield_Password">Password</string>
            <string name="regfield_Confirm_Password">Confirm Password</string>
            <string name="regfield_Address">Address</string>
            <string name="regfield_Telephone">Telephone</string>
            <string name="regfield_Radio_Group_Sex">Sex</string>
            <string name="regfield_Radio_Man">Man</string>
            <string name="regfield_Radio_Woman">Woman</string>
            <!--END register fields END -->


    <string name="reg_new_account"> Register your new account</string>
    <string name="existing_account"> You already have an account? touch here to go back to login</string>
    <!--END  Register form  END-->

    <!--END FORMS END-->



    <!-- ERRORS -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!--END ERRORS END -->

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Users> -->
    <string name="nom">LastName</string>
    <string name="prenom">FistName</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>

    <!-- Champs non identifiés A REVOIR -->

    <string name="imageaccueil">image</string>

    <string name="action_map">Show on Map</string>
    <string name="logout">You log out</string>

    <string name="prompt_phone">phone</string>
    <string name="prompt_mail">mail</string>

    <string name="version">Version : 1.0.0.1</string>
    <string name="copyright">&#169; Copyright 2016</string>
    <string name="about_com">Locodroid  is a trademark from Los Locos Company.    Android powered.    Cause the objet the link it composes has been detached </string>
    <string name="action_connected">You\'re connected as </string>
    <string name="bl">BERGER-LEVRAULT</string>
    <string name="radius_choice">Radius Choice</string>
    <string name="radius">Choose your radius</string>


</resources>
