<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/menu_connect"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom"
        android:title="@string/action_register"/>
    <item
        android:id="@+id/menu_register"
        android:orderInCategory="100"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="ifRoom"
        android:title="@string/action_sign_in"/>



    <group android:id="@+id/group_about" >
        <item
            android:id="@+id/menu_about"
            android:orderInCategory="100"
            android:title="@string/about"
            android:icon="@mipmap/ic_launcher"
            app:showAsAction="never"/>



    </group>

         <item
             android:id="@+id/menu_quit"
             android:orderInCategory="100"
             android:title="@string/quit"
             app:showAsAction="never"/>
            </menu>