<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:textAlignment="center"
    android:orientation="vertical">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/car"
        android:padding="50dp"
        android:layout_gravity="center_horizontal" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/version"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/about_com"
        android:layout_margin="10dp"

        />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/copyright"
        android:shadowColor="#FFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nav_back"
            android:id="@+id/btn_back"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="bottom|right"
            android:layout_margin="5dp" />
    </LinearLayout>


</LinearLayout>
