<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="#ffcccccc">

        <!--  Header  Starts
        <LinearLayout android:id="@+id/header"

            android:layout_width="fill_parent"
            android:layout_height="50dip"
        android:background="@layout/header_gradient"
          android:paddingTop="5dip"
          android:paddingBottom="5dip">
          -->
          <!-- Logo Start
          <ImageView android:src="@drawable/logo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"/>
               </LinearLayout>
          <Logo Ends -->

        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout android:id="@+id/footer"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="15dip"
            android:background="#14727e"
            android:layout_alignParentBottom="true">
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"

         android:background="#a1b9cc">
            <!--  android:layout_below="@id/header"-->
         <!-- Full Name Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_FullName"/>
            <EditText android:id="@+id/reg_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:background="@layout/rounded"
                android:layout_marginBottom="20dip"/>
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_Email"/>
            <EditText android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:background="@layout/rounded"
                android:layout_marginBottom="20dip"/>
            <!-- Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_Password"/>
            <EditText android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:background="@layout/rounded"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip" />
            <!-- Register Button -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_Confirm_Password"
                android:id="@+id/textView" />

            <EditText
                android:id="@+id/conf_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:password="true"
                android:singleLine="true"
                android:background="@layout/rounded"
                android:layout_marginBottom="20dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_Address"
                android:id="@+id/adress" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:background="@layout/rounded"
                android:layout_marginBottom="20dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_Telephone"
                android:id="@+id/textView3" />

            <EditText
                android:id="@+id/Telephone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@layout/rounded"
                android:singleLine="true"
                android:layout_marginBottom="20dip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#372c24"
                android:text="@string/regfield_Radio_Group_Sex"
                android:id="@+id/textView2" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="53dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regfield_Radio_Man"
                    android:id="@+id/man" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regfield_Radio_Woman"
                    android:id="@+id/woman" />
            </RadioGroup>

            <Button android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@layout/roundedbutton"
                android:text="@string/reg_new_account"/>
            <!-- Link to Login Screen -->
            <TextView android:id="@+id/link_to_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginBottom="40dip"
                android:background="@layout/roundedbutton"
                android:text="@string/existing_account"
                android:gravity="center"
                android:textSize="20dip"
                android:textColor="#025f7c"
                android:padding="5dip" />

        </LinearLayout>
        <!-- Registration Form Ends -->
    </RelativeLayout>
</ScrollView>