<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bl.locodroid.LoginActivity">



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/rounded"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:background="@drawable/rounded"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />



            <Button
                android:text="@string/action_register"
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:onClick="onClick1"
                android:background="@drawable/roundedbutton"
                android:layout_gravity="center_horizontal"
                android:padding="5dip"
                android:layout_marginTop="16dp"/>

            <Button
                android:text="@string/nav_back"
                android:id="@+id/ButtonRetour"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@drawable/roundedbutton"
                android:layout_gravity="bottom|center_horizontal"
                android:padding="5dip"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
